# thought-anchor-probes

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: experiment.yaml  experiment_audit_full.yaml  experiment_audit_full_altlabels.yaml  experiment_full.yaml  experiment_pilot.yaml  experiment_pilot_lopo.yaml  scaling_llama_correct.yaml  scaling_llama_incorrect.yaml  scaling_qwen_correct.yaml  scaling_qwen_incorrect.yaml
data/: problem_ids_pilot.json  splits_pilot.json  splits_scaling_shared.json
docs/: cache_provenance_guardrail.md  high_confidence_scaling_todos.md  lopo_cv.md  repo_status_2026-02-23.md  residualization.md  runpod_scaling_runbook.md  systematic_sweep_runbook.md  why_mean_pooling_can_erase_sparse_signal.md
scripts/: aggregate_runs.py  build_problem_index.py  build_report.py  check_spans.py  estimate_storage.py  eval_predictions.py  extract_embeddings.py  generate_sweep_configs.py  plan_deferrals.py  run_experiments.py  run_lopo_cv.py  run_release.py  run_scaling_grid.py  run_systematic_sweep.py  summarize_sweep.py  train_probes.py  verify_problem_labels.py
tests/: test_activations_dtype_compat.py  test_activations_skip.py  test_aggregate.py  test_config_paths.py  test_data_loading.py  test_deferrals.py  test_labels.py  test_metrics.py  test_models.py  test_readme_update.py  test_residualization.py  test_run_scaling_grid.py  test_spans.py  test_storage.py  test_sweep.py  test_sweep_factors.py  test_sweep_schema.py  test_sweep_smoke.py  test_systematic_sweep_scripts.py  test_token_probes.py  test_training_guards.py  (+1 more)
(+900 files in other folders)
